fix header collapse menu ip6/7/8plus +

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1703,6 +1703,7 @@ footer {
         flex-direction: column;
         justify-content: space-between;
         padding-bottom: 200px;
+        background-color: white;
       }
     }
 
